Se agregan a todas las vistas la clase de boostrap Breadcrum, para tener navegabilidad entre las páginas

--- a/views/booking/consultarBooking.phtml
+++ b/views/booking/consultarBooking.phtml
@@ -41,15 +41,14 @@ $(function()
 <div id="page-content">
 	<div id='wrap'>
 		<div id="page-heading">
-        
-			<!-- <ol class="breadcrumb">
-				<li><a href="index.php">Dashboard</a></li>
-				<li>UI Components</li>
-				<li class="active">Tabs &amp; Accordions</li>
-			</ol> -->
+                <ol class="breadcrumb">
+                    <li><a href="<?php echo BASE_URL . 'sistema'; ?>">Inicio</a></li>
+                    <li class="active">Booking</li>
+                </ol>
 
-			<h1>Consultar Booking</h1>
-		</div>
+
+                <h1>Booking</h1>
+            </div>
 		
         
         <div class="container">
