--- a/views/contacto/contactenos.phtml
+++ b/views/contacto/contactenos.phtml
@@ -2,8 +2,14 @@
 <div id="page-content">
     <div id='wrap'>
         <div id="page-heading">
-            <h1>Cont&aacute;ctenos</h1>
-        </div>
+                <ol class="breadcrumb">
+                    <li><a href="<?php echo BASE_URL . 'sistema'; ?>">Inicio</a></li>
+                    <li class="active">Contacto</li>
+                </ol>
+
+
+                <h1>Contacto</h1>
+            </div>
 	
         
         <div class="container" id="formid">
