--- a/views/imagen/imagenes.phtml
+++ b/views/imagen/imagenes.phtml
@@ -1,16 +1,14 @@
 <div id="page-content">
 	<div id='wrap'>
-		<div id="page-heading">
-        
-			<!-- <ol class="breadcrumb">
-				<li><a href="index.php">Dashboard</a></li>
-				<li>UI Components</li>
-				<li class="active">Tabs &amp; Accordions</li>
-			</ol> -->
+            <div id="page-heading">
+                <ol class="breadcrumb">
+                    <li><a href="<?php echo BASE_URL . 'sistema'; ?>">Inicio</a></li>
+                    <li class="active">Administraci&oacute;n de Im&aacute;genes</li>
+                </ol>
 
-			<h1>Im&aacute;genes Clientes</h1>
-			
-		</div>
+
+                <h1>Im&aacute;genes Clientes</h1>
+            </div>
 		<div class="container">
 
 			
