--- a/views/usuario/usuarios.phtml
+++ b/views/usuario/usuarios.phtml
@@ -2,11 +2,12 @@
     <div id='wrap'>
         <div id="page-heading">
 
-                <!-- <ol class="breadcrumb">
-                        <li><a href="index.php">Dashboard</a></li>
-                        <li>UI Components</li>
-                        <li class="active">Tabs &amp; Accordions</li>
-                </ol> -->
+        <div id="page-heading">
+            <ol class="breadcrumb">
+                <li><a href="<?php echo BASE_URL . 'sistema'; ?>">Inicio</a></li>
+                <li class="active">Administraci&oacute;n de usuarios</li>
+            </ol>
+            
 
                 <h1>Usuarios</h1>
         </div>
