--- a/views/buscarServicio/buscarServicios.phtml
+++ b/views/buscarServicio/buscarServicios.phtml
@@ -1,10 +1,14 @@
 <div id="page-content">
     <div id='wrap'>
         <div id="page-heading">
+                <ol class="breadcrumb">
+                    <li><a href="<?php echo BASE_URL . 'sistema'; ?>">Inicio</a></li>
+                    <li class="active">Buscar Servicios</li>
+                </ol>
 
-            <h1>Servicios</h1>
 
-        </div>
+                <h1>Buscar Servicios</h1>
+            </div>
 
 
         <div class="container">
