--- a/views/hotel/hoteles.phtml
+++ b/views/hotel/hoteles.phtml
@@ -1,10 +1,14 @@
 <div id="page-content">
 	<div id='wrap'>
-		<div id="page-heading">
+            <div id="page-heading">
+                <ol class="breadcrumb">
+                    <li><a href="<?php echo BASE_URL . 'sistema'; ?>">Inicio</a></li>
+                    <li class="active">Administraci&oacute;n de Hoteles</li>
+                </ol>
 
-			<h1>Hoteles</h1>
-			
-		</div>
+
+                <h1>Hoteles</h1>
+            </div>
 		
         
         <div class="container">
