--- a/views/hotel/buscarHoteles.phtml
+++ b/views/hotel/buscarHoteles.phtml
@@ -52,9 +52,14 @@ function initialize(lat, lon, nombre, id) {
 <div id="page-content">
     <div id='wrap'>
         <div id="page-heading">
-            <h2 style="margin: 10px;">Hoteles en <?php echo Session::get('sess_pCH_ciudad'); ?>/CHILE</h2>         
-          
-        </div> 
+                <ol class="breadcrumb">
+                    <li><a href="<?php echo BASE_URL . 'sistema'; ?>">Inicio</a></li>
+                    <li class="active">B&uacute;squeda de hoteles</li>
+                </ol>
+
+
+                <h1>B&uacute;squeda de hoteles</h1>
+            </div>
                 <?php 
                 
                 $tempCodHTL = '';
