--- a/views/hotel/buscarHoteles.phtml
+++ b/views/hotel/buscarHoteles.phtml
@@ -155,18 +155,26 @@ function initialize(lat, lon, nombre, id) {
                         
                         foreach($this->objGetHoteles as $objTipoH){
                             $contPestDet++;
+                            $monedaHot = '';
                             if($objHoteles->getCodigoHtl() ==  $objTipoH->getCodigoHtl()){
+                                if($objTipoH->getMoneda() == 'D'){
+                                   $monedaHot = 'USD'; 
+                                }
+                                else{
+                                   $monedaHot='CLP'; 
+                                }
+                              
                               $detalleHoteles.= '<tr class="colorText">'                              
                                     . '<td style="padding: 2px; vertical-align: middle;">'.$objTipoH->getTipoh().'</td>'
                                     . '<td style="padding: 2px; vertical-align: middle;">'.$objTipoH->getPalimt().'</td>'
-                                    . '<td style="color: #DF5F00; font-weight: bold; padding: 2px; vertical-align: middle;">'.$objTipoH->getPrecioFinal().'</td>'
+                                    . '<td style="color: #DF5F00; font-weight: bold; padding: 2px; vertical-align: middle;">'.$objTipoH->getPrecioFinal().' '.$monedaHot.'</td>'
                                     . '<td style="padding: 2px; vertical-align: middle;">'
                                     
                                     . '<input type="hidden" name="BH_codHotel"'.$contPest.'" value="'.$objTipoH->getCodigoHtl().'"> '
                                     . '<input type="hidden" name="BH_tipoh"'.$contPest.'" value="'.$objTipoH->getTipoh().'">'
                                     . '<input type="hidden" name="BH_palimt"'.$contPest.'" value="'.$objTipoH->getPalimt().'">'
                                     . '<input type="hidden" name="BH_precioFinal"'.$contPest.'" value="'.$objTipoH->getPrecioFinal().'">'  
-                                    . '<a href="#" id="btnCarroEnvio'.$contPestDet.'" onclick=procesoAddCarro(\'formSecHot'.$contPest.'\',\''.BASE_URL.'carro/insertOlVentas\',\'btnCarroEnvio'.$contPestDet.'\',\'\') class="btn btn-success btn-sm" style="width: 88px;">'.$objTipoH->getStatus().'</a>'
+                                    . '<a href="#" id="btnCarroEnvio'.$contPestDet.'" onclick=procesoAddCarro(\'formSecHot'.$contPest.'\',\''.BASE_URL.'carro/insertHotel\',\'btnCarroEnvio'.$contPestDet.'\',\'\') class="btn btn-success btn-sm" style="width: 88px;">'.$objTipoH->getStatus().'</a>'
                                     . '</td>'
                                     . '</tr>';
                                    
