Se termina una parte del proceso de carro de compra, se agregaser

--- a/views/buscarServicio/buscarServicios.phtml
+++ b/views/buscarServicio/buscarServicios.phtml
@@ -35,6 +35,14 @@
                                             Debe ingresar una <b>Ciudad</b>, <b>Nombre de hotel</b> o seleccionar una <b>Categoria</b>.
                                             <button type="button" class="close" onClick="muestraOculta('divAlertWarHot', '2')">&times;</button>
                                         </div>
+                                        <form id="frmServicio_">
+                                            
+                                            <div>
+                                            <a data-toggle="modal" href="#" id="btnCarroServicios_" class="btn btn-success btn-sm" style="width: 88px;" onclick="Servicios.prototype.procesoAddCarro('frmServicio_','<?php echo BASE_URL;?>carro/insertServicio','btnCarroServicios_');">RESERVAR</a>
+                                            </div>
+                                            
+                                        </form>
+                                        
 
                                         
 
