--- a/views/carro/centerBox/borraProducto.phtml
+++ b/views/carro/centerBox/borraProducto.phtml
@@ -7,7 +7,7 @@
                 <div class="col-md-12">
                    
      
-                    <center><input type="button" class="finish btn-primary btn" id="btnBorrarUsuario" style='background-color:#f29797;' o value="Eliminar Usuario" onclick="Carro.prototype.abreEliminaCarro('<?php echo BASE_URL; ?>carro/borrarProductoCarro/<?php echo $this->objCodCarro; ?>/<?php echo $this->objContCarro; ?>', 'Eliminar Carro', '<?php echo $this->objCodCarro ?>', '<?php echo BASE_URL; ?>carro/carroCompra')"/></center>
+                    <center><input type="button" class="finish btn-primary btn" id="btnBorrarUsuario" style='background-color:#f29797;' o value="Eliminar Usuario" onclick="Carro.prototype.abreEliminaCarro('<?php echo BASE_URL; ?>carro/borrarProductoCarro/<?php echo $this->objCodCarro; ?>/<?php echo $this->objContCarro; ?>/', 'Eliminar Carro', '<?php echo $this->objCodCarro ?>', '<?php echo BASE_URL; ?>carro/carroCompra')"/></center>
     
                     
                 </div>
